<resources>
    <string name="app_name">Jetset</string>

    <!--Splash Activity-->
    <string name="sp_txt_welcome">Loading…</string>
    <string name="sp_txt_failed">Failed. Close app and try again.</string>
    <string name="sp_access_message">You need to grant access to</string>
    <string name="sp_cancel_info">%1$s must have %2$s and %3$s permissions to run</string>
    <string name="sp_info_denied">Some Permission is Denied</string>
    <string name="sp_contacts">Contacts</string>
    <string name="sp_storage">Storage</string>

    <!--Dialog-->
    <string name="ok">Ok</string>
    <string name="cancel">Cancel</string>
    <string name="error_connection_title">No Internet connection</string>
    <string name="error_connection_message">Please check your network connection.</string>
    <string name="info_exit">"Are you sure you want to exit?"</string>
    <string name="info_logout">"Are you sure you want to logout?"</string>

    <!--LeftSlider-->
    <string name="ls_txt_loginTitle">Logged in as</string>
    <string name="ls_txt_departement">Departements</string>
    <string name="ls_txt_newArrivals">New Arrivals</string>
    <string name="ls_txt_mens">Mens</string>
    <string name="ls_txt_womens">Womens</string>
    <string name="ls_txt_kids">Kids</string>
    <string name="ls_txt_cart">Cart</string>
    <string name="ls_txt_myAccount">My Account</string>
    <string name="ls_txt_about">About</string>
    <string name="ls_txt_contact">Contact</string>
    <string name="ls_txt_logout">Logout</string>

    <!--Fragment HomeMenu-->
    <string name="home_no_data">Data not found</string>
    <string name="home_title">Shop</string>
    <string name="home_txt_newArrivals">New Arrivals</string>
    <string name="home_txt_mens">Mens</string>
    <string name="home_txt_womens">Womens</string>
    <string name="home_txt_kids">Kids</string>

    <!--Fragment Account-->
    <string name="acc_title">Account Info</string>
    <string name="acc_txt_btn_process">Process Your Order</string>
    <string name="acc_txt_title_name">Your Name</string>
    <string name="acc_txt_hint_first">First</string>
    <string name="acc_txt_hint_last">Last</string>
    <string name="acc_txt_hint_cc">Credit Card Number</string>
    <string name="acc_txt_hint_ccv">CCV</string>
    <string name="acc_txt_title_exp_date">Expiration Date</string>
    <string name="acc_txt_status_shipping">Shipping Address same as Billing Address</string>
    <string name="acc_txt_hint_address_1">Address Line One</string>
    <string name="acc_txt_hint_address_2">Address Line Two</string>
    <string name="acc_txt_hint_city">City</string>
    <string name="acc_txt_hint_state">State</string>
    <string name="acc_txt_hint_zip">Zip</string>

    <!--product detail-->
    <string name="prdct_txt_size">Size</string>
    <string name="prdct_txt_size_XS">XS</string>
    <string name="prdct_txt_size_S">S</string>
    <string name="prdct_txt_size_M">M</string>
    <string name="prdct_txt_size_L">L</string>
    <string name="prdct_txt_size_XL">XL</string>
    <string name="prdct_txt_size_XXL">XXL</string>
    <string name="prdct_txt_color">Color</string>
    <string name="prdct_txt_btn_cart">Add to Cart</string>
</resources>