<?xml version="1.0" encoding="utf-8"?>
<ViewAnimator xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/sp_animator"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray_dark">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/sp_txt_welcome"
        android:textColor="@android:color/white"
        android:textSize="20sp"
        android:textStyle="italic" />

    <ImageView
        android:id="@+id/sp_img"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_gravity="center"
        android:contentDescription="@string/app_name"
        android:src="@drawable/logo" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/sp_txt_failed"
        android:textColor="@android:color/white"
        android:textSize="20sp"
        android:textStyle="bold" />
</ViewAnimator>