<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:id="@+id/sv_account"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="?actionBarSize"
        android:focusable="true"
        android:focusableInTouchMode="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="20dp"
            android:paddingRight="10dp"
            android:paddingTop="20dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/acc_txt_title_name"
                android:textSize="12sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:baselineAligned="false"
                android:orientation="horizontal"
                android:weightSum="2">

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/til_name_first"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1">

                    <EditText
                        android:id="@+id/et_name_first"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:hint="@string/acc_txt_hint_first"
                        android:imeOptions="actionNext"
                        android:inputType="textCapSentences"
                        android:lines="1"
                        android:textSize="14sp" />
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/til_name_last"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_weight="1">

                    <EditText
                        android:id="@+id/et_name_last"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:hint="@string/acc_txt_hint_last"
                        android:imeOptions="actionNext"
                        android:inputType="textCapSentences"
                        android:lines="1"
                        android:textSize="14sp" />
                </android.support.design.widget.TextInputLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:baselineAligned="false"
                android:orientation="horizontal"
                android:weightSum="2">

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/til_cc_number"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.4">

                    <EditText
                        android:id="@+id/et_cc_number"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:hint="@string/acc_txt_hint_cc"
                        android:imeOptions="actionNext"
                        android:inputType="number"
                        android:lines="1"
                        android:textSize="14sp" />
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/til_ccv"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_weight="0.6">

                    <EditText
                        android:id="@+id/et_ccv"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:hint="@string/acc_txt_hint_ccv"
                        android:imeOptions="actionNext"
                        android:inputType="number"
                        android:lines="1"
                        android:textSize="14sp" />
                </android.support.design.widget.TextInputLayout>
            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/acc_txt_title_exp_date"
                android:textSize="12sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:baselineAligned="false"
                android:orientation="horizontal"
                android:weightSum="2">

                <android.support.v7.widget.AppCompatSpinner
                    android:id="@+id/sp_month"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:imeOptions="actionNext" />

                <android.support.v7.widget.AppCompatSpinner
                    android:id="@+id/sp_year"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_weight="1"
                    android:imeOptions="actionNext" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:gravity="center">

                <CheckBox
                    android:id="@+id/cb_shipping_status"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="10dp"
                    android:gravity="center|left"
                    android:text="@string/acc_txt_status_shipping"
                    android:textSize="12sp" />
            </LinearLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/til_address_1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp">

                <EditText
                    android:id="@+id/et_address_1"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/acc_txt_hint_address_1"
                    android:imeOptions="actionNext"
                    android:inputType="textCapSentences"
                    android:lines="1"
                    android:textSize="14sp" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/til_address_2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp">

                <EditText
                    android:id="@+id/et_address_2"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/acc_txt_hint_address_2"
                    android:imeOptions="actionNext"
                    android:inputType="textCapSentences"
                    android:lines="1"
                    android:textSize="14sp" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/til_city"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp">

                <EditText
                    android:id="@+id/et_city"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/acc_txt_hint_city"
                    android:imeOptions="actionNext"
                    android:lines="1"
                    android:textSize="14sp" />
            </android.support.design.widget.TextInputLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:baselineAligned="false"
                android:orientation="horizontal"
                android:weightSum="2">

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/til_state"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.2">

                    <EditText
                        android:id="@+id/et_state"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:hint="@string/acc_txt_hint_state"
                        android:imeOptions="actionNext"
                        android:lines="1"
                        android:textSize="14sp" />
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/til_zip"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_weight="0.8">

                    <EditText
                        android:id="@+id/et_zip"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:hint="@string/acc_txt_hint_zip"
                        android:imeOptions="actionDone"
                        android:inputType="number"
                        android:lines="1"
                        android:maxLength="5"
                        android:textSize="14sp" />
                </android.support.design.widget.TextInputLayout>
            </LinearLayout>

            <Button
                android:id="@+id/btn_process"
                android:layout_width="match_parent"
                android:layout_height="@dimen/height_button"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/selectable_btn"
                android:text="@string/acc_txt_btn_process"
                android:textAllCaps="false"
                android:textColor="@drawable/selectable_txt"
                android:textSize="20sp" />
        </LinearLayout>
    </ScrollView>
</android.support.design.widget.CoordinatorLayout>