<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/colorPrimaryDark"
    android:gravity="center"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingLeft="20dp"
        android:paddingTop="20dp">

        <xyz.girudo.jetset.customviews.CircleImageView
            android:id="@+id/ls_iv_user_image"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:scaleType="centerCrop"
            android:src="@drawable/logo"
            app:border_width="0dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginStart="10dp"
            android:orientation="vertical"
            android:padding="10dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/ls_txt_loginTitle"
                android:textColor="@color/text_inactive"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/ls_txt_user_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="3dp"
                android:ellipsize="end"
                android:maxLines="1"
                android:text="@string/ls_txt_myAccount"
                android:textColor="@color/text_inactive"
                android:textSize="18sp"
                android:textStyle="bold" />
        </LinearLayout>
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginBottom="20dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="20dp"
        android:background="@color/colorPrimary" />

    <TextView
        android:id="@+id/title"
        style="?android:attr/textAppearanceMedium"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:duplicateParentState="true"
        android:gravity="center_vertical"
        android:paddingBottom="10dp"
        android:paddingLeft="30dp"
        android:text="@string/ls_txt_departement"
        android:textColor="@color/text_inactive"
        android:textSize="20sp"
        android:textStyle="bold" />
</LinearLayout>